--- a/index.html
+++ b/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html>
-	<head>
-        <meta charset="utf-8">
-		<title>World Database Lookup</title>
+  <head>
+    <meta charset="utf-8" />
+    <title>World Database Lookup</title>
 
-		<!-- you can modify this as needed or to your preference -->
-		<link href="world.css" type="text/css" rel="stylesheet" />
+    <!-- you can modify this as needed or to your preference -->
+    <link href="world.css" rel="stylesheet" />
+  </head>
 
-		<!-- you write this -->
-		<script src="world.js" type="text/javascript"></script>
-	</head>
+  <body>
+    <header>
+      <img id="globe" src="world.png" />
+      <h1>World Database Lookup</h1>
+    </header>
 
-	<body>
-		<header>
-			<h1>World Database Lookup</h1>
-		</header>
+    <main>
+      <content>
+        <div id="controls">
+          <div id="search-bar">
+            <input
+              id="country"
+              type="search"
+              name="country"
+              placeholder="Enter country name"
+            />
+          </div>
 
-		<main>
-			<div id="controls">
-				<label for="country">Country:</label>
-				<input id="country" type="search" name="country" placeholder="Enter country name" />
-				<button id="lookup">Lookup</button>
-			</div>
-			
-			<div id="result">
-				<!-- countries will appear here -->
-			</div>
-		</main>
+          <div id="buttons">
+            <button id="lookup">Lookup</button>
+          </div>
+        </div>
 
-	</body>
+        <div id="result">
+          <!-- countries will appear here -->
+        </div>
+      </content>
+      <script src="world.js" type="text/javascript"></script>
+    </main>
+  </body>
 </html>
