Edited world.js, world.php, world.css and index.html to retrieve and display information for cities within a requested country. Edited index.html and world.css to add a footer to the page.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           </div>
 
           <div id="buttons">
-            <button id="lookup">Lookup</button>
+            <button id="lookup-country">Lookup Country</button>
+            <button id="lookup-cities">Lookup Cities</button>
           </div>
         </div>
 
@@ -35,7 +36,10 @@
           <!-- countries will appear here -->
         </div>
       </content>
-      <script src="world.js" type="text/javascript"></script>
     </main>
+
+    <footer></footer>
+
+    <script src="world.js" type="text/javascript"></script>
   </body>
 </html>
